<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.edw88.baricharafriends.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_listFragment_to_settingsFragment"
            app:destination="@id/navigation_preference" />
    </fragment>
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.edw88.baricharafriends.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail"
        >
        <argument
            android:name="sitio"
            app:argType="com.edw88.baricharafriends.model.SitiosItem" />
        <action
            android:id="@+id/action_navigation_detail_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_preference"
        android:name="com.edw88.baricharafriends.ui.preference.SettingsFragment"
        android:label="@string/title_preference" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.edw88.baricharafriends.maps.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <argument
            android:name="sitio"
            app:argType="com.edw88.baricharafriends.model.SitiosItem" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.edw88.baricharafriends.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_splashFragment_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.edw88.baricharafriends.ui.login.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/login_fragment" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.edw88.baricharafriends.ui.register.RegisterFragment"
        android:label="register_fragment"
        tools:layout="@layout/register_fragment" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>