<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ic_launcher_background"
    android:foregroundTint="@color/primero">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/segundo"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:backgroundTint="@color/primero"
            android:backgroundTintMode="multiply">

            <ImageView
                android:id="@+id/imagen_card_image_view"
                android:layout_width="100dp"
                android:layout_height="76dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/border_radius"
                android:contentDescription="@string/imagelist"
                android:minWidth="100dp"
                android:minHeight="76dp"
                app:layout_constraintEnd_toStartOf="@+id/descripcion_card_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombre_card_text_view"
                app:srcCompat="@drawable/cementerio_barichara" />

            <TextView
                android:id="@+id/nombre_card_text_view"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                android:text="@string/cementerio"
                android:textAlignment="center"
                android:textColor="@color/primero"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="26" />

            <TextView
                android:id="@+id/descripcion_card_text_view"
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:justificationMode="inter_word"
                android:text="@string/cementerio_descripcion_corta"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombre_card_text_view"
                tools:targetApi="26" />

            <RatingBar
                android:id="@+id/ratingBarCard"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/ic_launcher_background"
                android:backgroundTint="@color/ic_launcher_background"
                android:backgroundTintMode="multiply"
                android:foregroundTint="@color/purple_500"
                android:indeterminateTint="@color/ic_configuration_background"
                android:progressBackgroundTint="@color/primero"
                android:progressTint="@color/primero"
                android:rating="4.8"
                android:secondaryProgressTint="@color/tercero"
                android:stepSize="0.1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imagen_card_image_view"
                app:layout_constraintStart_toEndOf="@+id/calificacion_card_text_view"
                app:layout_constraintTop_toBottomOf="@+id/imagen_card_image_view"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/calificacion_card_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:fadeScrollbars="true"
                android:text="@string/_5_0"
                android:textAlignment="center"
                android:textColor="@color/primero"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                android:textStyle="normal|bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imagen_card_image_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>